--- a/index.html
+++ b/index.html
@@ -77,6 +77,17 @@
                 <h1>Reported posts</h1>
             </div>
         </main>
+
+        <!-- Question & Answer -->
+        <section class="article">
+            <article>
+                <h2>জাভাস্ক্রিপ্ট কীভাবে কাজ করে?</h2>
+                <p>
+                    জাভাস্ক্রিপ্ট একটি অবজেক্ট অরিয়েন্টেট ডায়নামিক ল্যাঙ্গুয়েজ। অন্যান্য প্রোগ্রামিং ভাষার মত এটিও একটি উচ্চতর প্রোগ্রামিং ভাষা। এই ভাষা টি মানুষ এবং মেশিন উভই খুব সহজে পড়তে পারে। দৈনন্দিন জীবনে ওয়েবসাইটে যে কাজ, সব খানেই জাভাস্ক্রিপ্ট এর বিচরন। এটি মূলত কাজ করে ব্রাউজার ইঞ্জিন এর সাথে। ইঞ্জিন জাভাস্ক্রিপ্ট কোড কে কম্পাইল করে মেশিন ল্যাঙ্গুয়েইজে পরিণত করে, এরপর তা আমরা দেখতে পাই। জাভাস্ক্রিপ্ট এর দ্বারা যখন কোন কোড লেখা হয় সেইটা জাভাস্ক্রিপ্ট উপর থেকে নিচের দিকে একে এক পড়তে থাকে।
+                </p>
+            </article>
+            
+        </section>
         <footer></footer>
 
         <!-- add javascript  file  -->
