post in like btn fixed

--- a/index.html
+++ b/index.html
@@ -79,20 +79,20 @@
         </main>
 
         <!-- Question & Answer -->
-        <section class="article">
+        <section class="article" id="article">
             <article>
-                <h2>জাভাস্ক্রিপ্ট কীভাবে কাজ করে?</h2>
+                <h3>জাভাস্ক্রিপ্ট কীভাবে কাজ করে ?</h3>
                 <p>
                     জাভাস্ক্রিপ্ট একটি অবজেক্ট অরিয়েন্টেট ডায়নামিক ল্যাঙ্গুয়েজ। অন্যান্য প্রোগ্রামিং ভাষার মত এটিও একটি উচ্চতর প্রোগ্রামিং ভাষা। এই ভাষা টি মানুষ এবং মেশিন উভই খুব সহজে পড়তে পারে। দৈনন্দিন জীবনে ওয়েবসাইটে যে কাজ, সব খানেই জাভাস্ক্রিপ্ট এর বিচরন। এটি মূলত কাজ করে ব্রাউজার ইঞ্জিন এর সাথে। ইঞ্জিন জাভাস্ক্রিপ্ট কোড কে কম্পাইল করে মেশিন ল্যাঙ্গুয়েইজে পরিণত করে, এরপর তা আমরা দেখতে পাই। জাভাস্ক্রিপ্ট এর দ্বারা যখন কোন কোড লেখা হয় সেইটা জাভাস্ক্রিপ্ট উপর থেকে নিচের দিকে একে এক পড়তে থাকে।
                 </p>
             </article>
             <article>
-                <h2>লোকাল স্টোরেজ ও সেশন স্টোরেজ এর মধ্যে পার্থক্য কি ?</h2>
+                <h3>লোকাল স্টোরেজ ও সেশন স্টোরেজ এর মধ্যে পার্থক্য কি ?</h3>
                 <ol>
                     <li>লোকাল স্টোরেজ এর মান গুলো স্থায়ী কিন্তু সেশন স্টোরেজ এর ডাটা ক্ষনস্থায়ী।</li>
 
                     <li>ব্রাউজার রিস্টার্ট এবং এমনকি OS রিবুট হওয়ার পরেও ডাটার মান চলে যায় না। সেশন স্টোরেজ এর ডাটাগুলো পেজ রিফ্রেশ করলে যায় না, রিবুট করলে যায়</li>
-                    
+
                     <li>একই পেজ ভিন্ন একটি উইন্ডোতে খুলার পরও লোকাল স্টোরেজ এর ডাটাগুলো অ্যাক্সেস করা যায়। অপরদিকে নতুন ট্যাব খুললে সেশন স্টোরেজ এর ডাটা আর থাকে না।</li>
                 </ol>
             </article>
